--- a/css/main.scss
+++ b/css/main.scss
@@ -93,6 +93,11 @@ p{
 }
 .content-redes{
     position: relative;
+    a{
+        &:hover{
+            text-decoration: none;
+        }
+    }
     @media (min-width: 480px){
         display: flex;
         bottom: -20px;
