--- a/css/main.scss
+++ b/css/main.scss
@@ -52,10 +52,10 @@ p{
 
 .btns{
     padding: 10px;
-    background-color: $blueLight;
+    background-color: #01aec8;
     border-radius: 20px;
-    margin: 10px;
-    color: white;
+    margin: 10px 4px;
+    color: #fff;
     font-size: 11px;
     img{
         max-width: 20px;
@@ -63,12 +63,15 @@ p{
     }
     p{
         margin: 0;
-        line-height: 18px;
+        line-height: 14px;
     }
     @media (min-width: 576px){
         font-size: 16px;
         margin: 0 10px;
         font-size: auto;
+        p{
+            line-height: 18px;
+        }
         img{
             max-width: 25px;
         }
@@ -146,8 +149,8 @@ p{
         &.fixed{
             position: fixed;
             width: 100%;
-            left: 50%;
-            transform: translateY(calc(100% - 50px)) translateX(-50%); 
+            left: 0;
+            transform: translateY(calc(100% - 200px));
             z-index: 9;
             background: rgb(227,232,42);
             background: linear-gradient(180deg, rgba(227,232,42,0) 0%, rgba(227,232,42,1) 82%, rgba(227,232,42,1) 100%);
