--- a/css/main.scss
+++ b/css/main.scss
@@ -147,11 +147,12 @@ p{
             margin: 0 auto;
         }
         &.fixed{
-            position: fixed;
-            width: 100%;
             left: 0;
-            transform: translateY(calc(100% - 200px));
+            bottom: 0;
             z-index: 9;
+            display: flex;
+            width: 100%;
+            position: fixed;
             background: rgb(227,232,42);
             background: linear-gradient(180deg, rgba(227,232,42,0) 0%, rgba(227,232,42,1) 82%, rgba(227,232,42,1) 100%);
             img{
