--- a/css/main.scss
+++ b/css/main.scss
@@ -146,38 +146,38 @@ p{
             display: block;
             margin: 0 auto;
         }
-        &.fixed{
-            left: 0;
-            bottom: 0;
-            z-index: 9;
-            display: flex;
-            width: 100%;
-            position: fixed;
-            background: rgb(227,232,42);
-            background: linear-gradient(180deg, rgba(227,232,42,0) 0%, rgba(227,232,42,1) 82%, rgba(227,232,42,1) 100%);
-            img{
-                position: relative;
-                z-index: 1;
-            }
-            &::after{
-                content: '';
-                z-index: 1;
-                width: 100%;
-                height: 100%;
-                bottom: 0;
-                left: 0;
-                display: block;
-                position: absolute;
-                background:
-                    url(../img/SVG/candle.svg) no-repeat 0 69%/22px,
-                    url(../img/SVG/candle.svg) no-repeat 14% 60%/28px,
-                    url(../img/SVG/candle.svg) no-repeat 7% 76%/23px,
-                    url(../img/SVG/candle.svg) no-repeat 22% 74%/40px,
-                    url(../img/SVG/candle.svg) no-repeat 81% 85%/35px,
-                    url(../img/SVG/candle.svg) no-repeat 97% 64%/20px,
-                    url(../img/SVG/candle.svg) no-repeat 90% 60%/20px;
-            }
-        }
+        // &.fixed{
+        //     left: 0;
+        //     bottom: 0;
+        //     z-index: 9;
+        //     display: flex;
+        //     width: 100%;
+        //     position: fixed;
+        //     background: rgb(227,232,42);
+        //     background: linear-gradient(180deg, rgba(227,232,42,0) 0%, rgba(227,232,42,1) 82%, rgba(227,232,42,1) 100%);
+        //     img{
+        //         position: relative;
+        //         z-index: 1;
+        //     }
+        //     &::after{
+        //         content: '';
+        //         z-index: 1;
+        //         width: 100%;
+        //         height: 100%;
+        //         bottom: 0;
+        //         left: 0;
+        //         display: block;
+        //         position: absolute;
+        //         background:
+        //             url(../img/SVG/candle.svg) no-repeat 0 69%/22px,
+        //             url(../img/SVG/candle.svg) no-repeat 14% 60%/28px,
+        //             url(../img/SVG/candle.svg) no-repeat 7% 76%/23px,
+        //             url(../img/SVG/candle.svg) no-repeat 22% 74%/40px,
+        //             url(../img/SVG/candle.svg) no-repeat 81% 85%/35px,
+        //             url(../img/SVG/candle.svg) no-repeat 97% 64%/20px,
+        //             url(../img/SVG/candle.svg) no-repeat 90% 60%/20px;
+        //     }
+        // }
     }
     .candle1{
         background:
@@ -261,7 +261,7 @@ p{
     }
     @media (min-width: 768px){
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(8, 80px);
+        grid-template-rows: repeat(8, 65px);
         .cake{
             grid-column-start: 5;
             grid-column-end: 9;
@@ -280,11 +280,11 @@ p{
             grid-column-end: 7;
             grid-row-start: 1;
             grid-row-end: 5;
-            margin-top: 20px;
-            margin-left: 25px;
+            // margin-top: 20px;
+            // margin-left: 25px;
             background: none;
             img{
-                max-width: 280px;
+                max-width: 250px;
             }
         }
         .step2{
@@ -316,6 +316,7 @@ p{
             grid-column-end: end;
             grid-row-start: 1;
             grid-row-end: 4;
+            padding-top: 30px;
             img{
                 width: 100%;
                 max-width: 300px;
@@ -327,6 +328,7 @@ p{
             grid-row-start: 3;
             grid-row-end: 6;
             z-index: 1;
+            padding-top: 0;
             img{
                 width: 100%;
                 max-width: 200px;
@@ -348,7 +350,7 @@ p{
             grid-column-start: 4;
             grid-column-end: 7;
             grid-row-start: 4;
-            grid-row-end: 6;
+            grid-row-end: 7;
         }
         .candle2{
             background: url(../img/SVG/candle.svg) no-repeat 33% 16%/26px,url(../img/SVG/candle.svg) no-repeat center 0px/40px;
